--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.28.2"
   },
   "devDependencies": {
+    "@rollup/rollup-darwin-x64": "^4.36.0",
     "@vitejs/plugin-react": "^4.3.4",
     "vite": "^6.0.9"
   }
